--- a/src/components/Menu/style.module.css
+++ b/src/components/Menu/style.module.css
@@ -8,18 +8,21 @@
   align-items: center;
   justify-content: center;
   box-shadow: none;
-  row-gap: 24px;
   flex-direction: row;
-  margin: 6px;
   color: var(--gray-900);
+  transition: all 0.1m ease-in-out;
+  text-decoration: none;
+  
   
 }
-.icon {
-  height: 24px;
-  width: 24px;
+.buttonIconPage:hover{
+  filter: brightness(80%);
 }
-.IconsPage {
+
+.iconsContainer {
   display: flex;
+  flex-direction: row;
   justify-content: center;
-  margin: 24px;
+  gap: 16px; 
+  margin: 16px;
 }
