--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,3 +13,13 @@ body{
   color: var(--text-default);
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+.container-main{
+  margin: 0 auto;
+  
+  max-width: 980px;
+}
+.content{
+  margin: 32px;
+  
+}
