--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,12 +14,51 @@ body{
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.container-main{
-  margin: 0 auto;
-  
-  max-width: 980px;
+form{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
 }
-.content{
-  margin: 32px;
-  
+input{
+
+  background-color: var(--gray-900);
+  font-size: 14px;
+  height: 42px;
+  border-bottom: var(--primary);
+  color: var(--gray-100);
+  font-weight: 500;
+
+}
+.formCollun{
+  flex-direction: column;
+  display: flex;
+  gap: 12px;
+  text-align: center;
+  font-weight: 600;
+  font-size: 16px;
+}
+.formRow{
+  flex-direction: column;
+  display: flex;
+  gap: 12px;
+  text-align: center;
+  font-weight: 600;
+  font-size: 16px;
+
+}
+
+button{
+  background-color: var(--primary);
+  height: 44px;
+  width: 236px;
+  border-radius: 4px;
+  border-style: none;
+
+}
+
+.icon{
+  height: 32px;
+  width: 32px;
 }
