--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,16 +21,7 @@ form{
   flex-direction: column;
 
 }
-input{
 
-  background-color: var(--gray-900);
-  font-size: 14px;
-  height: 42px;
-  border-bottom: var(--primary);
-  color: var(--gray-100);
-  font-weight: 500;
-
-}
 .formCollun{
   flex-direction: column;
   display: flex;
@@ -39,10 +30,12 @@ input{
   font-weight: 600;
   font-size: 16px;
 }
-.formRow{
+.form{
   flex-direction: column;
   display: flex;
   gap: 12px;
+  margin: 12px;
+
   text-align: center;
   font-weight: 600;
   font-size: 16px;
