--- a/src/components/Cycles/style.module.css
+++ b/src/components/Cycles/style.module.css
@@ -15,11 +15,11 @@
   border-radius: 24px;
 }
 .workTime {
-  background-color: var(--warning);
-}
-.shortBreakTime {
   background-color: var(--primary);
 }
-.longBreakTime {
+.ShortBreakTime {
+  background-color: #eab308;
+}
+.LongBreakTime {
   background-color: var(--info);
 }
