--- a/src/components/heading/style.module.css
+++ b/src/components/heading/style.module.css
@@ -3,5 +3,8 @@
   align-items: center;
   justify-content: center;
   display: flex;
+  flex-direction: row;
+  gap: 16px;
+  margin-bottom: 24px;
   
 }
